Bug 484273 - kfontinst crashes after clicking on install
Summary: kfontinst crashes after clicking on install
Status: RESOLVED FIXED
Alias: None
Product: kfontview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.2
Platform: Manjaro Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-22 20:17 UTC by medin
Modified: 2024-03-23 03:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2024-03-22 20:17:29 UTC
If you try to install a ttf or otf font via kfontview, and you click on install button, then kfontint crashes


Operating System: Manjaro Linux 
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.8.1-1-MANJARO (64-bit)
Graphics Platform: Wayland



[Thread debugging using libthread_db enabled]
Using host libthread_db library "/usr/lib/libthread_db.so.1".
Core was generated by `/usr/bin/kfontinst --embed 0x2 --qwindowtitle Font Viewer --qwindowicon kfontvi'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  0x00007731900b37f7 in XChangeProperty (dpy=0x62ad2e6d9cf0, w=2, property=68, type=33, format=32, mode=0, data=0x7ffd4ec27a48 "\002", nelements=1)
    at /usr/src/debug/libx11/libX11-1.8.7/src/ChProp.c:46
46          LockDisplay(dpy);                                                                                                                                                                  
[Current thread is 1 (Thread 0x773189f27e80 (LWP 5771))]
(gdb) bt
#0  0x00007731900b37f7 in XChangeProperty (dpy=0x62ad2e6d9cf0, w=2, property=68, type=33, format=32, mode=0, data=0x7ffd4ec27a48 "\002", nelements=1)
    at /usr/src/debug/libx11/libX11-1.8.7/src/ChProp.c:46
#1  0x00007731900cd82e in XSetTransientForHint (dpy=<optimized out>, w=<optimized out>, propWindow=<optimized out>) at /usr/src/debug/libx11/libX11-1.8.7/src/SetHints.c:290
#2  0x000062ad2df1d2a9 in createParent (xid=2) at /usr/src/debug/plasma-workspace/plasma-workspace-6.0.2/kcms/kfontinst/apps/CreateParent.h:32
#3  0x000062ad2df1754c in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/plasma-workspace/plasma-workspace-6.0.2/kcms/kfontinst/apps/Installer.cpp:133
(gdb)
Comment 1 Bug Janitor Service 2024-03-22 21:47:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4125
Comment 2 Nicolas Fella 2024-03-22 23:05:17 UTC
Git commit c212b3a4221423c59046f1c5f229eef80c594ed4 by Nicolas Fella.
Committed on 22/03/2024 at 21:47.
Pushed by nicolasfella into branch 'master'.

[kfontinst] Skip window parenting on Wayland

It does raw X11 calls, that will explode on Wayland

M  +4    -0    kcms/kfontinst/apps/CreateParent.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/c212b3a4221423c59046f1c5f229eef80c594ed4
Comment 3 Nicolas Fella 2024-03-22 23:06:27 UTC
Git commit f1734fd5cebffcce7cce9e67f6a082ec114ab4a5 by Nicolas Fella.
Committed on 22/03/2024 at 23:06.
Pushed by nicolasfella into branch 'Plasma/6.0'.

[kfontinst] Skip window parenting on Wayland

It does raw X11 calls, that will explode on Wayland
(cherry picked from commit c212b3a4221423c59046f1c5f229eef80c594ed4)

M  +4    -0    kcms/kfontinst/apps/CreateParent.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/f1734fd5cebffcce7cce9e67f6a082ec114ab4a5
Comment 4 Nicolas Fella 2024-03-22 23:06:45 UTC
Git commit b23945618230634ae1564af0c5bd5a60d79078c6 by Nicolas Fella.
Committed on 22/03/2024 at 23:06.
Pushed by nicolasfella into branch 'Plasma/5.27'.

[kfontinst] Skip window parenting on Wayland

It does raw X11 calls, that will explode on Wayland
(cherry picked from commit c212b3a4221423c59046f1c5f229eef80c594ed4)

M  +4    -0    kcms/kfontinst/apps/CreateParent.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/b23945618230634ae1564af0c5bd5a60d79078c6