[kfontinst] Skip window parenting on Wayland

It does raw X11 calls, that will explode on Wayland

BUG: 484273
(cherry picked from commit c212b3a4221423c59046f1c5f229eef80c594ed4)