kcms/kfontinst/apps/CreateParent.h
@@ -17,6 +17,10 @@
 // for xid, and all other widgets can use this as their parent...
 static QWidget *createParent(int xid)
 {
+    if (!QX11Info::isPlatformX11()) {
+        return nullptr;
+    }
+
     if (!xid)
         return nullptr;
 
